Hotfix: Consolidate and harden getLinkByValue in NewObjectDiagram (null-safety, defensive checks)